# mujoco_ros2_control_ur_robotiq

./: CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  ur5e_controllers_mujoco.yaml
launch/: ur5e.launch.py
ur_description/: CMakeLists.txt  package.xml
ur_description/meshes/ur5e/collision/meshes/: base_vis.stl  forearm_vis.stl  peg.stl  shoulder_vis.stl  upperarm_vis.stl  wrist1_vis.stl  wrist2_vis.stl  wrist3_vis.stl
ur_description/urdf/ur5e/: robotiq.ros2_control.xacro  ur5e.ros2_control.xacro  ur5e_macro.xacro  ur5e_mujoco.urdf.xacro
ur_mujoco/: CMakeLists.txt  package.xml
ur_mujoco/ur5e/: README.md  ur5e.xml  world.xml
