<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>mujoco_ros2_ur</name>
 <version>0.1.0</version>
 <description>mujoco_ros2_ur</description>

 <maintainer email="khalil.abuibaid@rptu.com">Khalil Abuibaid</maintainer>

 <license>TODO</license>

 <author>Khalil Abuibaid</author>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>rclcpp</depend>
 <depend>rclcpp_action</depend>
 <depend>std_msgs</depend>
 <depend>control_msgs</depend>
 <depend>joint_trajectory_controller</depend>
 <exec_depend>joint_state_publisher</exec_depend>
 <exec_depend>controller_manager</exec_depend>
 <depend>velocity_controllers</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
 <depend>force_torque_sensor_broadcaster</depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
