<?xml version="1.0"?>
<package format="3">
  <name>ur_mujoco</name>
  <version>0.1.0</version>
  <description>ur mjcf model</description>

  <license>TODO</license>
  <maintainer email="todo@todo.todo">TODO</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
